fix: add center alignment

--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -39,11 +39,11 @@ body {
 }
 
 .main {
-    margin-top: 7px;
     min-height: calc(100vh - 176px);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .main-after {
@@ -99,11 +99,13 @@ body {
 
 .rules {
     margin: 0 20px;
+    padding-top: 20px;
 }
 
 .rules-after {
     width: 28%;
-    margin-top: 10px;
+    margin-top: -80px;
+    /* margin-top: 10px; */
     margin-bottom: 10px;
 }
 
@@ -262,6 +264,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 28%;
 }
 
 .play {
